--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/NKMUN/hi.nkmun.cn-backend#readme",
   "dependencies": {
     "commander": "^2.9.0",
+    "escape-string-regexp": "^1.0.5",
     "jsonwebtoken": "^7.1.9",
     "koa": "^2.0.1",
     "koa-accesslog": "0.0.2",
