fine grain access control

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "archiver": "^2.0.3",
     "commander": "^2.9.0",
     "csv-stringify": "^1.0.4",
+    "curry": "^1.2.0",
     "escape-string-regexp": "^1.0.5",
     "jsonwebtoken": "^8.0.1",
     "koa": "^2.0.1",
