--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nodemailer": "^4.1.0",
     "password-prompt": "^1.0.2",
     "shortid": "^2.2.6",
+    "superagent": "^3.7.0",
     "winston": "^2.2.0"
   }
 }
