--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mz": "^2.4.0",
     "nodemailer": "^4.1.0",
     "password-prompt": "^1.0.2",
+    "sharp": "^0.18.4",
     "shortid": "^2.2.6",
     "superagent": "^3.7.0",
     "winston": "^2.2.0"
