--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "shortid": "^2.2.6",
     "superagent": "^3.7.0",
     "winston": "^2.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.18.1"
   }
 }
